--- a/src/components/modalError/testModal.html
+++ b/src/components/modalError/testModal.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="/src/components/button/button.css" />
+    <link rel="stylesheet" href="/src/components/modalError/modalError.css" />
   </head>
   <body>
-    <script type="module" src="/src/components/button/button.js"></script>
+    <script
+      type="module"
+      src="/src/components/modalError/modalError.js"
+    ></script>
   </body>
 </html>
