feat: add commands to header component
Export: The main function "Header"
Import: The module "Custom Event"

--- a/src/components/header/testHeader.html
+++ b/src/components/header/testHeader.html
@@ -7,6 +7,6 @@
     <link rel="stylesheet" href="/src/components/header/header.css" />
   </head>
   <body>
-    <script src="/src/components/header/index.js"></script>
+    <script type="module" src="/src/components/header/index.js"></script>
   </body>
 </html>
