--- a/src/components/winnersList/winnersList.css
+++ b/src/components/winnersList/winnersList.css
@@ -34,7 +34,7 @@ body {
 
 #listSection {
   width: 290px;
-  height: 300px;
+  height: fit-content;
   display: flex;
   flex-direction: column;
   row-gap: 20px;
