--- a/src/components/winnersList/testWinnersList.html
+++ b/src/components/winnersList/testWinnersList.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="/src/components/winnersList/winnersList.css" />
   </head>
   <body>
+    <button>Resetar</button>
     <script
       type="module"
       src="/src/components/winnersList/winnersList.js"
