feat: making defaulRandomizer + style

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -203,3 +203,14 @@ nav > div:hover {
 	}
 }
 /* end modal error */
+/* Para navegadores baseados no WebKit (Chrome, Safari, Edge) */
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Para Firefox */
+input[type="number"] {
+  -moz-appearance: textfield;
+}
