--- a/src/components/defaultRandomizer/style.css
+++ b/src/components/defaultRandomizer/style.css
@@ -1,16 +1,14 @@
-
-
 #random-default {
-  margin-top: 0px;
+	margin-top: 0px;
 
 	display: flex;
 	flex-direction: column;
-  align-items: center;
-  gap: 1rem;
+	align-items: center;
+	gap: 1rem;
 
 	margin: 6rem 1rem 6rem;
 	min-height: 500px;
-  max-width: 1100px;
+	max-width: 1100px;
 
 	background: var(--black-background);
 	border-radius: 1rem;
@@ -24,6 +22,9 @@
 	}
 	label span {
 		font-size: 1.2rem;
+	}
+	* {
+		font-size: 1rem;
 	}
 }
 
@@ -39,6 +40,7 @@
 
 #last-winners-no {
 	position: relative;
+	cursor: pointer;
 }
 
 #last-winners-no input {
@@ -59,26 +61,25 @@
 	background-color: #49996d;
 }
 
-.checkmark::after{
-  content: "";
-  position: absolute;
-  left: 3px;
-  top: 50%;
-  transform: translate(-0, -50%);
+.checkmark::after {
+	content: "";
+	position: absolute;
+	left: 3px;
+	top: 50%;
+	transform: translate(-0, -50%);
 
-  background: var(--black-background);
+	background: var(--black-background);
 	width: 15px;
 	height: 15px;
-  border-radius: 100%;
+	border-radius: 100%;
 
-  transition: all 0.2s ease-in-out;
+	transition: all 0.2s ease-in-out;
 }
 
-#last-winners-no input:checked + .checkmark::after{
+#last-winners-no input:checked + .checkmark::after {
 	left: calc(100% - 18px);
-  background: var(--white);
+	background: var(--white);
 }
-
 
 #lreset-winners-default {
 	position: relative;
@@ -86,4 +87,46 @@
 
 #lreset-winners-default input {
 	display: none;
+}
+
+#button-randomizer {
+	border: 1px solid var(--white);
+	border-radius: 0.3rem;
+
+	height: 40px;
+	width: 135px;
+
+	/* padding: 0.3rem 1rem; */
+	position: relative;
+	overflow: hidden;
+	color: var(--white);
+	z-index: 1;
+
+	font-size: .95rem;
+	transition:all 0.2s;
+}
+
+#button-randomizer:hover{
+	height: 35px;
+}
+
+#button-randomizer::before {
+	content: "";
+	position: absolute;
+	width: 100%;
+	height: 0%;
+	background: #49996d;
+
+	transition:all 0.2s;
+
+	left: 0%;
+	top: 0;
+	z-index: -1;
+}
+
+#button-randomizer:hover::before {
+	content: "";
+	position: absolute;
+	width: 100%;
+	height: 100%;
 }
