--- a/src/components/defaultRandomizer/style.css
+++ b/src/components/defaultRandomizer/style.css
@@ -4,7 +4,7 @@
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	gap: 1rem;
+	gap: 1.4rem;
 
 	margin: 6rem 1rem 6rem;
 	min-height: 500px;
@@ -21,7 +21,7 @@
 		gap: 1rem;
 	}
 	label span {
-		font-size: 1.2rem;
+		font-size: 1.3rem;
 	}
 	* {
 		font-size: 1rem;
@@ -102,12 +102,20 @@
 	color: var(--white);
 	z-index: 1;
 
-	font-size: .95rem;
-	transition:all 0.2s;
+	font-size: 0.95rem;
+	transition: all 0.2s;
 }
 
-#button-randomizer:hover{
+#randomizer-container {
+	height: 40px;
+	display: flex;
+	align-items: end;
+}
+
+#button-randomizer:hover {
 	height: 35px;
+	animation: toggleShadow 2s infinite;
+	animation-delay: 1s;
 }
 
 #button-randomizer::before {
@@ -117,7 +125,7 @@
 	height: 0%;
 	background: #49996d;
 
-	transition:all 0.2s;
+	transition: all 0.2s;
 
 	left: 0%;
 	top: 0;
@@ -129,4 +137,83 @@
 	position: absolute;
 	width: 100%;
 	height: 100%;
+}
+
+@keyframes toggleShadow {
+	0% {
+		box-shadow: 0 0 0px 0 rgba(73, 153, 109, 0.8); /* Sombra "desligada" */
+	}
+	50% {
+		box-shadow: 0 0 15px 5px rgba(73, 153, 109, 0.8); /* Sombra "ligada" */
+	}
+	100% {
+		box-shadow: 0 0 0px 0 rgba(73, 153, 109, 0.8); /* Sombra "desligada" novamente */
+	}
+}
+
+#return-button {
+	position: relative;
+}
+
+#return-button::before {
+	content: "";
+	width: 1px;
+	height: 0.6rem;
+	background: var(--white);
+	position: absolute;
+	top: 95%;
+	left: 110%;
+	transform: rotate(-45deg);
+	opacity: 0;
+	transition: left 0.2s;
+}
+
+#return-button::after {
+	content: "";
+	position: absolute;
+	top: 100%;
+	left: 110%;
+	width: 0%;
+	height: 1px;
+	background: var(--white);
+
+	transition: all 0.2s;
+}
+
+#return-button:hover::before {
+	opacity: 100%;
+	left: -7px;
+}
+
+#return-button:hover::after {
+	left: -10px;
+	width: 120%;
+}
+
+#winners-container {
+	margin: 3rem 0;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	gap: 1rem;
+
+	h3 {
+		font-size: 2rem;
+	}
+	& > p {
+		width: 120%;
+		border: 1px solid var(--white);
+		border-radius: .5rem;
+		padding: 1rem;
+
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		flex-direction: column;
+		gap: 2rem;
+
+		font-weight: 700;
+
+		font-size: 1.3rem;
+	}
 }
