--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -14,6 +14,15 @@ body {
 	--white: #efefef;
 	--black-background: #1a3b28;
 	background: #3f6e56;
+	position: relative;
+	min-height: 100vh;
+}
+
+#randomix {
+	display: flex;
+	justify-content: center;
+	padding-bottom: 200px;
+	align-items: center;
 }
 
 footer {
@@ -22,6 +31,9 @@ footer {
 	width: 100%;
 	min-height: 200px;
 	padding: 3rem;
+
+	position: absolute;
+	bottom: 0;
 
 	display: flex;
 	justify-content: center;
@@ -74,14 +86,14 @@ nav > div:hover {
 
 @media (max-width: 750px) {
 	#headerContainer {
-	  flex-direction: column;
-	  row-gap: 20px;
+		flex-direction: column;
+		row-gap: 20px;
 	}
-  }
-  
-  @media (max-width: 450px) {
+}
+
+@media (max-width: 450px) {
 	#headerContainer > nav {
-	  column-gap: 85px;
+		column-gap: 85px;
 	}
 }
 /* end header */
@@ -199,20 +211,20 @@ nav > div:hover {
 /* Para navegadores baseados no WebKit (Chrome, Safari, Edge) */
 input[type="number"]::-webkit-inner-spin-button,
 input[type="number"]::-webkit-outer-spin-button {
-  -webkit-appearance: none;
-  margin: 0;
+	-webkit-appearance: none;
+	margin: 0;
 }
 
 /* Para Firefox */
 input[type="number"] {
-  -moz-appearance: textfield;
+	-moz-appearance: textfield;
 }
-
 
 /* Default randomizer */
 #random-default {
 	margin-top: 0px;
 
+	width: 100%;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
@@ -315,12 +327,18 @@ input[type="number"] {
 
 	font-size: 0.95rem;
 	transition: all 0.2s;
+
+	font-weight: 700;
 }
 
 #randomizer-container {
 	height: 40px;
 	display: flex;
 	align-items: end;
+}
+
+#resetButton:hover {
+	text-decoration: underline;
 }
 
 #button-randomizer:hover {
@@ -334,7 +352,7 @@ input[type="number"] {
 	position: absolute;
 	width: 100%;
 	height: 0%;
-	background: #49996d;
+	background: #38B98E;
 
 	transition: all 0.2s;
 
@@ -352,13 +370,13 @@ input[type="number"] {
 
 @keyframes toggleShadow {
 	0% {
-		box-shadow: 0 0 0px 0 rgba(73, 153, 109, 0.8);
+		box-shadow: 0 0 0px 0 #49996dcc;
 	}
 	50% {
-		box-shadow: 0 0 15px 5px rgba(73, 153, 109, 0.8);
+		box-shadow: 0 0 15px 5px #49996dcc;
 	}
 	100% {
-		box-shadow: 0 0 0px 0 rgba(73, 153, 109, 0.8);
+		box-shadow: 0 0 0px 0 #49996dcc;
 	}
 }
 
@@ -414,7 +432,7 @@ input[type="number"] {
 	& > p {
 		width: 120%;
 		border: 1px solid var(--white);
-		border-radius: .5rem;
+		border-radius: 0.5rem;
 		padding: 1rem;
 
 		display: flex;
@@ -429,3 +447,161 @@ input[type="number"] {
 	}
 }
 /* End Default randomizer */
+
+/* slot */
+.aboveItem {
+	top: -80px;
+}
+
+.middleItem {
+	top: 0px;
+}
+
+.bellowItem {
+	top: 80px;
+}
+
+/* end slot */
+
+/* scratch */
+
+/* BUTTON */
+
+button {
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-size: 15px;
+  color: white;
+  border-radius: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  column-gap: 10px;
+  padding: 10px 20px;
+  transition: all 0.1s ease;
+  cursor: pointer;
+  border: none;
+  height: fit-content;
+  width: fit-content;
+  align-self: center;
+}
+
+button:hover {
+  transform: scale(1.05);
+  filter: brightness(0.9);
+}
+
+#imageButton {
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 20px;
+  height: 20px;
+}
+
+/* CARTELA */
+
+#scratchCard {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: fit-content;
+  color: white;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  background-color: #1a3b28;
+	border-radius: 1rem;
+}
+
+#headerCardSection {
+  font-size: 35px;
+  text-align: center;
+}
+
+#mainCardSection {
+  display: flex;
+}
+
+#textCardSection {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 190px;
+  text-align: center;
+  font-size: 20px;
+}
+
+#scratchSection {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+  padding: 40px 20px;
+  max-width: 900px;
+}
+
+.scratchContainer {
+  width: 150px;
+  height: 75px;
+  background-image: linear-gradient(
+    315deg,
+    lightgrey 0%,
+    lightgrey 1%,
+    #e0e0e0 26%,
+    #efefef 48%,
+    #d9d9d9 75%,
+    #bcbcbc 100%
+  );
+  border-radius: 10px;
+  cursor: pointer;
+}
+
+.scratchContainerWinner {
+  width: 150px;
+  height: 75px;
+  background-color: var(--white);
+  border-radius: 10px;
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.winnerContainer {
+  overflow-x: auto;
+  text-align: center;
+  color: black;
+}
+
+@media (max-width: 1150px) {
+  #scratchCard {
+    row-gap: 20px;
+  }
+
+  #mainCardSection {
+    flex-direction: column;
+    align-items: center;
+  }
+}
+
+#scratchPage {
+  display: flex;
+  flex-direction: column;
+  row-gap: 50px;
+  align-items: center;
+}
+
+#scratchPageSection1 {
+  display: flex;
+  column-gap: 50px;
+  margin-top: 50px;
+  padding: 0px 30px;
+}
+
+@media (max-width: 1350px) {
+  #scratchPageSection1 {
+    flex-direction: column;
+    row-gap: 50px;
+  }
+}
+/* end scratch */
