--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,492 +1,506 @@
 * {
-	margin: 0;
-	padding: 0;
-	box-sizing: border-box;
-	color: #efefef;
-	background: none;
-	border: none;
-	outline: none;
-	list-style: none;
-	text-decoration: none;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  color: #efefef;
+  background: none;
+  border: none;
+  outline: none;
+  list-style: none;
+  text-decoration: none;
 }
 
 body {
-	--white: #efefef;
-	--black-background: #1a3b28;
-	background: #3f6e56;
-	position: relative;
-	min-height: 100vh;
+  --white: #efefef;
+  --black-background: #1a3b28;
+  background: #3f6e56;
+  position: relative;
+  min-height: 100vh;
 }
 
 #randomix {
-	display: flex;
-	justify-content: center;
-	padding-bottom: 200px;
-	align-items: center;
+  display: flex;
+  justify-content: center;
+  padding-bottom: 181.2px;
+  align-items: center;
 }
 
 /* FOOTER */
 
 footer {
-	background-color: var(--black-background);
-	display: flex;
-	justify-content: center;
-	align-items: center;
-  }
-  
-  #sectionFooter {
-	display: flex;
-	flex-direction: column;
-	row-gap: 50px;
-	padding: 40px 0px 20px 0px;
-  }
-  
+  background-color: var(--black-background);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+}
+
+#sectionFooter {
+  display: flex;
+  flex-direction: column;
+  row-gap: 35px;
+  padding: 20px 0px 20px 0px;
+}
+
+#innerFooterSection {
+  display: flex;
+  column-gap: 60px;
+}
+
+#innerFooterSection > div {
+  display: flex;
+  align-items: center;
+  column-gap: 20px;
+}
+
+img[src$="alphaImage.png"],
+img[src$="gitHubImage.png"] {
+  height: 65px;
+}
+
+#innerFooterSection > div > div {
+  display: flex;
+  flex-direction: column;
+  row-gap: 5px;
+}
+
+#innerFooterSection > div > div > a:hover {
+  text-decoration: underline;
+}
+
+#innerFooterSection > div > a {
+  display: flex;
+  justify-content: center;
+}
+
+a[href="https://www.alphaedtech.org.br/"]
+{
+  display: flex;
+  align-items: center;
+}
+
+#sectionFooter > p {
+  text-align: center;
+  font-size: 15px;
+}
+
+@media (max-width: 350px) {
   #innerFooterSection {
-	display: flex;
-	column-gap: 60px;
+    column-gap: 40px;
   }
-  
-  #innerFooterSection > div {
-	display: flex;
-	align-items: center;
-	column-gap: 20px;
-  }
-  
-  img[src$="alphaImage.png"], img[src$="gitHubImage.png"] {
-	height: 65px;
-  }
-  
-  #innerFooterSection > div > div {
-	display: flex;
-	flex-direction: column;
-	row-gap: 5px;
-  }
-  
-  #innerFooterSection > div > div > a:hover {
-	text-decoration: underline;
-  }
-  
-  #innerFooterSection > div > a {
-	display: flex;
-	justify-content: center;
-  }
-  
-  a[href="https://www.alphaedtech.org.br/"]{
-	display: flex;
-	align-items: center;
-  }
-  
-  #sectionFooter > p {
-	text-align: center;
-	font-size: 15px;
-  }
-  
-  @media (max-width: 350px){
-	#innerFooterSection {
-	  column-gap: 40px;
-	}
-  }
+}
 
 /* header */
 #headerContainer {
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
-	font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
-		"Lucida Sans", Arial, sans-serif;
-	border-bottom: 2px solid white;
-	padding: 10px 40px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+    "Lucida Sans", Arial, sans-serif;
+  border-bottom: 2px solid white;
+  padding: 10px 40px;
+}
+
+#pageName {
+  background-image: url("https://santosfabin.github.io/src/assets/header/full-logo.svg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 65px;
+  height: 80px;
 }
 
 #headerContainer > nav {
-	display: flex;
-	column-gap: 100px;
+  display: flex;
+  column-gap: 100px;
 }
 
 nav > div {
-	cursor: pointer;
-	transition: all 0.1s ease;
+  cursor: pointer;
+  transition: all 0.1s ease;
 }
 
 nav > div:hover {
-	transform: scale(1.1);
+  transform: scale(1.1);
 }
 
 @media (max-width: 750px) {
-	#headerContainer {
-		flex-direction: column;
-		row-gap: 20px;
-	}
+  #headerContainer {
+    flex-direction: column;
+    row-gap: 20px;
+  }
 }
 
 @media (max-width: 450px) {
-	#headerContainer > nav {
-		column-gap: 85px;
-	}
+  #headerContainer > nav {
+    column-gap: 85px;
+  }
 }
 /* end header */
 
 .containerItens {
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	align-items: center;
-	gap: 10px;
-	padding: 20px;
-	width: 100%;
-	max-width: 800px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  padding: 20px;
+  width: 100%;
+  max-width: 800px;
 }
 
 .textAreaItens {
-	width: 85%;
-	max-width: 700px;
-	min-height: 200px;
-	max-height: 400px;
-	padding: 7px;
-	font-size: 1rem;
-	border-radius: 8px;
-	resize: vertical;
-	border: 1px solid var(--white);
+  width: 85%;
+  max-width: 700px;
+  min-height: 200px;
+  max-height: 400px;
+  padding: 7px;
+  font-size: 1rem;
+  border-radius: 8px;
+  resize: vertical;
+  border: 1px solid var(--white);
 }
 .textAreaItens::placeholder {
-	color: var(--white);
-	opacity: 0.5;
+  color: var(--white);
+  opacity: 0.5;
 }
 
 /* winner list */
 #containerList {
-	border: 2px solid var(--white);
-	border-radius: 20px;
-	padding: 20px 5px;
-	display: flex;
-	flex-direction: column;
-	row-gap: 20px;
-	align-items: center;
+  border: 2px solid var(--white);
+  border-radius: 20px;
+  padding: 20px 5px;
+  display: flex;
+  flex-direction: column;
+  row-gap: 20px;
+  align-items: center;
 }
 
 #imageContainer {
-	width: 250px;
-	height: 200px;
-	background-image: url("https://santosfabin.github.io/Randomix/src/assets/winnersList/trophiesImage.png");
-	background-position: center;
-	background-repeat: no-repeat;
-	background-size: cover;
+  width: 250px;
+  height: 200px;
+  background-image: url("https://santosfabin.github.io/Randomix/src/assets/winnersList/trophiesImage.png");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 #listSection {
-	width: 290px;
-	height: fit-content;
-	display: flex;
-	flex-direction: column;
-	row-gap: 20px;
-	font-family: Verdana, Geneva, Tahoma, sans-serif;
-	font-size: 25px;
-	overflow: auto;
+  width: 290px;
+  height: fit-content;
+  display: flex;
+  flex-direction: column;
+  row-gap: 20px;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-size: 25px;
+  overflow: auto;
 }
 
 .winnerContainer {
-	display: flex;
-	flex-direction: column;
-	row-gap: 5px;
-	text-align: center;
+  display: flex;
+  flex-direction: column;
+  row-gap: 5px;
+  text-align: center;
 }
 
 .winnerPosition {
-	font-size: 15px;
+  font-size: 15px;
 }
 /* end winner list */
 
 /* modal error */
 #notificationErrorContainer {
-	position: fixed;
-	bottom: 0;
-	left: 50%;
-	padding: 30px 40px;
-	background-color: #ff6347;
-	border-top-left-radius: 10px;
-	border-top-right-radius: 10px;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	color: white;
-	font-size: 20px;
-	animation: goingUp 1s forwards;
+  position: fixed;
+  bottom: 0;
+  left: 50%;
+  padding: 30px 40px;
+  background-color: #ff6347;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  font-size: 20px;
+  animation: goingUp 1s forwards;
 }
 
 #notificationErrorButton {
-	position: absolute;
-	top: 7px;
-	right: 7px;
-	cursor: pointer;
-	background-image: url("https://santosfabin.github.io/Randomix/src/assets/modalError/closeImage.svg");
-	background-repeat: no-repeat;
-	background-position: center;
-	background-size: cover;
-	width: 21px;
-	height: 21px;
+  position: absolute;
+  top: 7px;
+  right: 7px;
+  cursor: pointer;
+  background-image: url("https://santosfabin.github.io/Randomix/src/assets/modalError/closeImage.svg");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  width: 21px;
+  height: 21px;
 }
 
 @keyframes goingUp {
-	0% {
-		transform: translateX(-50%) translateY(500px);
-	}
+  0% {
+    transform: translateX(-50%) translateY(500px);
+  }
 
-	100% {
-		transform: translateX(-50%) translateY(0);
-	}
+  100% {
+    transform: translateX(-50%) translateY(0);
+  }
 }
 /* end modal error */
 /* Para navegadores baseados no WebKit (Chrome, Safari, Edge) */
 input[type="number"]::-webkit-inner-spin-button,
 input[type="number"]::-webkit-outer-spin-button {
-	-webkit-appearance: none;
-	margin: 0;
+  -webkit-appearance: none;
+  margin: 0;
 }
 
 /* Para Firefox */
 input[type="number"] {
-	-moz-appearance: textfield;
+  -moz-appearance: textfield;
 }
 
 /* Default randomizer */
 #random-default {
-	margin-top: 0px;
+  margin-top: 0px;
 
-	width: 100%;
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	gap: 1.4rem;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1.4rem;
 
-	margin: 6rem 1rem 6rem;
-	min-height: 500px;
-	max-width: 1100px;
+  margin: 6rem 1rem 6rem;
+  min-height: 500px;
+  max-width: 1100px;
 
-	background: var(--black-background);
-	border-radius: 1rem;
+  background: var(--black-background);
+  border-radius: 1rem;
 
-	padding: 2rem;
+  padding: 2rem;
 
-	label {
-		display: flex;
-		align-items: center;
-		gap: 1rem;
-	}
-	label span {
-		font-size: 1.3rem;
-	}
-	* {
-		font-size: 1rem;
-	}
+  label {
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+  }
+  label span {
+    font-size: 1.3rem;
+  }
+  * {
+    font-size: 1rem;
+  }
 }
 
 #how-many-default {
-	input {
-		border: 1px solid var(--white);
-		border-radius: 5px;
-		padding: 8px 9px;
-		width: 3rem;
-		font-size: 0.95rem;
-	}
+  input {
+    border: 1px solid var(--white);
+    border-radius: 5px;
+    padding: 8px 9px;
+    width: 3rem;
+    font-size: 0.95rem;
+  }
 }
 
 #last-winners-no {
-	position: relative;
-	cursor: pointer;
+  position: relative;
+  cursor: pointer;
 }
 
 #last-winners-no input {
-	display: none;
+  display: none;
 }
 
 .checkmark {
-	width: 40px;
-	height: 20px;
-	border-radius: 1rem;
-	background-color: var(--white);
-	display: inline-block;
-	margin-right: 8px;
-	transition: all 0.2s ease-in-out;
-	position: relative;
+  width: 40px;
+  height: 20px;
+  border-radius: 1rem;
+  background-color: var(--white);
+  display: inline-block;
+  margin-right: 8px;
+  transition: all 0.2s ease-in-out;
+  position: relative;
 }
 #last-winners-no input:checked + .checkmark {
-	background-color: #49996d;
+  background-color: #49996d;
 }
 
 .checkmark::after {
-	content: "";
-	position: absolute;
-	left: 3px;
-	top: 50%;
-	transform: translate(-0, -50%);
+  content: "";
+  position: absolute;
+  left: 3px;
+  top: 50%;
+  transform: translate(-0, -50%);
 
-	background: var(--black-background);
-	width: 15px;
-	height: 15px;
-	border-radius: 100%;
+  background: var(--black-background);
+  width: 15px;
+  height: 15px;
+  border-radius: 100%;
 
-	transition: all 0.2s ease-in-out;
+  transition: all 0.2s ease-in-out;
 }
 
 #last-winners-no input:checked + .checkmark::after {
-	left: calc(100% - 18px);
-	background: var(--white);
+  left: calc(100% - 18px);
+  background: var(--white);
 }
 
 #lreset-winners-default {
-	position: relative;
+  position: relative;
 }
 
 #lreset-winners-default input {
-	display: none;
+  display: none;
 }
 
 #button-randomizer {
-	border: 1px solid var(--white);
-	border-radius: 0.3rem;
+  border: 1px solid var(--white);
+  border-radius: 0.3rem;
 
-	height: 40px;
-	width: 135px;
+  height: 40px;
+  width: 135px;
 
-	position: relative;
-	overflow: hidden;
-	color: var(--white);
-	z-index: 1;
+  position: relative;
+  overflow: hidden;
+  color: var(--white);
+  z-index: 1;
 
-	font-size: 0.95rem;
-	transition: all 0.2s;
+  font-size: 0.95rem;
+  transition: all 0.2s;
 
-	font-weight: 700;
+  font-weight: 700;
 }
 
 #randomizer-container {
-	height: 40px;
-	display: flex;
-	align-items: end;
+  height: 40px;
+  display: flex;
+  align-items: end;
 }
 
 #resetButton:hover {
-	text-decoration: underline;
+  text-decoration: underline;
 }
 
 #button-randomizer:hover {
-	height: 35px;
-	animation: toggleShadow 2s infinite;
-	animation-delay: 1s;
+  height: 35px;
+  animation: toggleShadow 2s infinite;
+  animation-delay: 1s;
 }
 
 #button-randomizer::before {
-	content: "";
-	position: absolute;
-	width: 100%;
-	height: 0%;
-	background: #38B98E;
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 0%;
+  background: #38b98e;
 
-	transition: all 0.2s;
+  transition: all 0.2s;
 
-	left: 0%;
-	top: 0;
-	z-index: -1;
+  left: 0%;
+  top: 0;
+  z-index: -1;
 }
 
 #button-randomizer:hover::before {
-	content: "";
-	position: absolute;
-	width: 100%;
-	height: 100%;
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
 }
 
 @keyframes toggleShadow {
-	0% {
-		box-shadow: 0 0 0px 0 #49996dcc;
-	}
-	50% {
-		box-shadow: 0 0 15px 5px #49996dcc;
-	}
-	100% {
-		box-shadow: 0 0 0px 0 #49996dcc;
-	}
+  0% {
+    box-shadow: 0 0 0px 0 #49996dcc;
+  }
+  50% {
+    box-shadow: 0 0 15px 5px #49996dcc;
+  }
+  100% {
+    box-shadow: 0 0 0px 0 #49996dcc;
+  }
 }
 
 #return-button {
-	position: relative;
+  position: relative;
 }
 
 #return-button::before {
-	content: "";
-	width: 1px;
-	height: 0.6rem;
-	background: var(--white);
-	position: absolute;
-	top: 95%;
-	left: 110%;
-	transform: rotate(-45deg);
-	opacity: 0;
-	transition: left 0.2s;
+  content: "";
+  width: 1px;
+  height: 0.6rem;
+  background: var(--white);
+  position: absolute;
+  top: 95%;
+  left: 110%;
+  transform: rotate(-45deg);
+  opacity: 0;
+  transition: left 0.2s;
 }
 
 #return-button::after {
-	content: "";
-	position: absolute;
-	top: 100%;
-	left: 110%;
-	width: 0%;
-	height: 1px;
-	background: var(--white);
+  content: "";
+  position: absolute;
+  top: 100%;
+  left: 110%;
+  width: 0%;
+  height: 1px;
+  background: var(--white);
 
-	transition: all 0.2s;
+  transition: all 0.2s;
 }
 
 #return-button:hover::before {
-	opacity: 100%;
-	left: -7px;
+  opacity: 100%;
+  left: -7px;
 }
 
 #return-button:hover::after {
-	left: -10px;
-	width: 120%;
+  left: -10px;
+  width: 120%;
 }
 
 #winners-container {
-	margin: 3rem 0;
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	gap: 1rem;
+  margin: 3rem 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1rem;
 
-	h3 {
-		font-size: 2rem;
-	}
-	& > p {
-		width: 120%;
-		border: 1px solid var(--white);
-		border-radius: 0.5rem;
-		padding: 1rem;
+  h3 {
+    font-size: 2rem;
+  }
+  & > p {
+    width: 120%;
+    border: 1px solid var(--white);
+    border-radius: 0.5rem;
+    padding: 1rem;
 
-		display: flex;
-		justify-content: center;
-		align-items: center;
-		flex-direction: column;
-		gap: 2rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    gap: 2rem;
 
-		font-weight: 700;
+    font-weight: 700;
 
-		font-size: 1.3rem;
-	}
+    font-size: 1.3rem;
+  }
 }
 /* End Default randomizer */
 
 /* slot */
 .aboveItem {
-	top: -80px;
+  top: -80px;
 }
 
 .middleItem {
-	top: 0px;
+  top: 0px;
 }
 
 .bellowItem {
-	top: 80px;
+  top: 80px;
 }
 
 /* end slot */
@@ -537,7 +551,7 @@ button:hover {
   color: white;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   background-color: #1a3b28;
-	border-radius: 1rem;
+  border-radius: 1rem;
 }
 
 #headerCardSection {
@@ -617,6 +631,7 @@ button:hover {
   flex-direction: column;
   row-gap: 50px;
   align-items: center;
+  padding-bottom: 50px;
 }
 
 #scratchPageSection1 {
